Tried collocations with text file.

--- a/ReadingDalloway.ipynb
+++ b/ReadingDalloway.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "cf5042dd",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "61d93e35",
    "metadata": {},
    "outputs": [
@@ -6754,7 +6754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "1fd8f8ec",
    "metadata": {},
    "outputs": [
@@ -6775,7 +6775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "id": "0b449596",
    "metadata": {},
    "outputs": [
@@ -6807,13 +6807,13 @@
     }
    ],
    "source": [
-    "text_dalloway = Text(new_dalloway_words)\n",
+    "text_dalloway = nltk.Text(new_dalloway_words)\n",
     "text_dalloway.concordance('ladies')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "id": "38e7ea22",
    "metadata": {},
    "outputs": [
@@ -6838,7 +6838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "id": "b35540d4",
    "metadata": {},
    "outputs": [
@@ -6861,7 +6861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "id": "4dbf7360",
    "metadata": {},
    "outputs": [
@@ -6881,7 +6881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "id": "f17f468d",
    "metadata": {},
    "outputs": [
@@ -7900,7 +7900,7 @@
        " ...]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7917,7 +7917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "id": "04d2dcf1",
    "metadata": {},
    "outputs": [
@@ -7946,7 +7946,7 @@
        " ('Miss', 103)]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7954,6 +7954,27 @@
    "source": [
     "dalloway_distribution = FreqDist(meaningful_dalloway)\n",
     "dalloway_distribution.most_common(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c98a5f1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peter Walsh; Sir William; Lady Bruton; Miss Kilman; Prime Minister;\n",
+      "Ellie Henderson; Mrs Filmer; Mrs Dalloway; Hugh Whitbread; Warren\n",
+      "Smith; drawing room; Sally Seton; motor car; Aunt Helena; Big Ben;\n",
+      "Richard Dalloway; motor cars; Miss Parry; Project Gutenberg; years ago\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_dalloway.collocations()"
    ]
   }
  ],
