--- a/ReadingDalloway.ipynb
+++ b/ReadingDalloway.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "cf5042dd",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,12 +32,13 @@
     "import matplotlib.pyplot as plt\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "import nltk\n",
+    "import logging\n",
     "nltk.download('punkt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "61d93e35",
    "metadata": {},
    "outputs": [
@@ -6754,7 +6755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "1fd8f8ec",
    "metadata": {},
    "outputs": [
@@ -6775,7 +6776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "0b449596",
    "metadata": {},
    "outputs": [
@@ -6813,7 +6814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "38e7ea22",
    "metadata": {},
    "outputs": [
@@ -6838,7 +6839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "b35540d4",
    "metadata": {},
    "outputs": [
@@ -6861,7 +6862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "4dbf7360",
    "metadata": {},
    "outputs": [
@@ -6881,7 +6882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "f17f468d",
    "metadata": {},
    "outputs": [
@@ -7900,7 +7901,7 @@
        " ...]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7917,7 +7918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "04d2dcf1",
    "metadata": {},
    "outputs": [
@@ -7946,7 +7947,7 @@
        " ('Miss', 103)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7958,8 +7959,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "c98a5f1f",
+   "execution_count": 20,
+   "id": "2e46526b",
    "metadata": {},
    "outputs": [
     {
