Trying to get unit test to work.

--- a/ReadingDalloway.ipynb
+++ b/ReadingDalloway.ipynb
@@ -7959,41 +7959,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7a81c4eb",
+   "execution_count": 26,
+   "id": "2a15562e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Peter Walsh; Sir William; Lady Bruton; Miss Kilman; Prime Minister;\n",
-      "Ellie Henderson; Mrs Filmer; Mrs Dalloway; Hugh Whitbread; Warren\n",
-      "Smith; drawing room; Sally Seton; motor car; Aunt Helena; Big Ben;\n",
-      "Richard Dalloway; motor cars; Miss Parry; Project Gutenberg; years ago\n"
+      "Peter Walsh; Sir William; Lady Bruton; Miss Kilman; Prime Minister\n"
      ]
     }
    ],
    "source": [
-    "text_dalloway.collocations()"
+    "text_dalloway.collocations(num=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "03ac9964",
+   "execution_count": 27,
+   "id": "965c01bd",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Text' object has no attribute 'add'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-87624e8407e0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtext_dalloway\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtext_dalloway\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Brodie\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Text' object has no attribute 'add'"
-     ]
+     "data": {
+      "text/plain": [
+       "<Text: Project Gutenberg Australia Title Mrs Dalloway 1925 Author...>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -8002,8 +7998,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "bec7f9d8",
+   "execution_count": 28,
+   "id": "575f6b03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8012,8 +8008,8 @@
     "class TestDallowayText(unittest.TestCase):\n",
     "    def test_check_text(self):\n",
     "        name = text_dalloway.collocations()\n",
-    "        name.lookup(\"Peter Walsh\")\n",
-    "        self.assertEqual(\"Peter Walsh\", name)        "
+    "        name_test = name.lookup(\"Peter Walsh\")\n",
+    "        self.assertEqual(\"Peter Walsh\", name_test)"
    ]
   }
  ],
