Got unittest working with code mentor's help

--- a/ReadingDalloway.ipynb
+++ b/ReadingDalloway.ipynb
@@ -7959,7 +7959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "2a15562e",
    "metadata": {},
    "outputs": [
@@ -7967,12 +7967,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Peter Walsh; Sir William; Lady Bruton; Miss Kilman; Prime Minister\n"
+      "Peter Walsh\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_dalloway.collocations(num=5)"
+    "text_dalloway.collocations(num=1)==\"Peter Walsh\""
    ]
   },
   {
@@ -7998,19 +8008,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "id": "575f6b03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_check_text (__main__.TestDallowayText) ... ok\n",
+      "test_word_check (__main__.TestDallowayText) ... ERROR\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_word_check (__main__.TestDallowayText)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-56-812e41d0ef93>\", line 10, in test_word_check\n",
+      "    self.assertEqual(p_check(sentence), 1)\n",
+      "NameError: name 'p_check' is not defined\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 0.012s\n",
+      "\n",
+      "FAILED (errors=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x213e639e520>"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import unittest\n",
     "\n",
     "class TestDallowayText(unittest.TestCase):\n",
     "    def test_check_text(self):\n",
-    "        name = text_dalloway.collocations()\n",
-    "        name_test = name.lookup(\"Peter Walsh\")\n",
-    "        self.assertEqual(\"Peter Walsh\", name_test)"
+    "        pull_number = dalloway_distribution.most_common(10)\n",
+    "        self.assertEqual(pull_number[0][1], 410)\n",
+    "        \n",
+    "    def test_word_check(self):\n",
+    "        sentence = \"The pretty dog ran out.\"\n",
+    "        self.assertEqual(p_check(sentence), 1)\n",
+    "\n",
+    "unittest.main(argv=[''], verbosity=2, exit=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95abb683",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
